--- a/notebooks/data-cleaning/data-aug.ipynb
+++ b/notebooks/data-cleaning/data-aug.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "096adf33",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
     }
    ],
    "source": [
-    "# Função para criar dataset augmentado\n",
+    "# Função para criar dataset aumentado\n",
     "def augment_dataset(input_base, output_base, num_augmented=1000):\n",
     "    for liga in os.listdir(input_base):\n",
     "        liga_path = os.path.join(input_base, liga)\n",
