YOLO + CNN a bombar

--- a/notebooks/classification/CNN.ipynb
+++ b/notebooks/classification/CNN.ipynb
@@ -1454,6 +1454,79 @@
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ecb6bfaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pedrofs/ISCTE/Mestrado/ComputerVision/venv/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/Users/pedrofs/ISCTE/Mestrado/ComputerVision/venv/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Clube detetado: deportivo-alavez\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "from torchvision import transforms, models\n",
+    "import torch\n",
+    "import os\n",
+    "\n",
+    "# Caminhos\n",
+    "IMAGE_PATH = \"/Users/pedrofs/Downloads/tmpsrdcxbgh.png\"\n",
+    "CNN_MODEL_PATH = \"best_model.pt\"\n",
+    "DATASET_DIR = \"/Users/pedrofs/Library/CloudStorage/OneDrive-ISCTE-IUL/Mestrado/2ªSem/APVC/Projeto/dataset/augmented-flat\"\n",
+    "\n",
+    "# Dispositivo\n",
+    "DEVICE = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
+    "# Transformações iguais ao treino\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((256, 256)),\n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "# Nomes das classes (pastas)\n",
+    "class_names = sorted([\n",
+    "    d for d in os.listdir(DATASET_DIR)\n",
+    "    if os.path.isdir(os.path.join(DATASET_DIR, d)) and not d.startswith(\".\")\n",
+    "])\n",
+    "\n",
+    "# Carregar modelo\n",
+    "model = models.resnet18(pretrained=False)\n",
+    "model.fc = torch.nn.Linear(model.fc.in_features, len(class_names))\n",
+    "model.load_state_dict(torch.load(CNN_MODEL_PATH, map_location=DEVICE))\n",
+    "model = model.to(DEVICE)\n",
+    "model.eval()\n",
+    "\n",
+    "# Preparar imagem\n",
+    "image = Image.open(IMAGE_PATH).convert(\"RGB\")\n",
+    "input_tensor = transform(image).unsqueeze(0).to(DEVICE)\n",
+    "\n",
+    "# Inferência\n",
+    "with torch.no_grad():\n",
+    "    output = model(input_tensor)\n",
+    "    pred_idx = torch.argmax(output, dim=1).item()\n",
+    "    pred_class = class_names[pred_idx]\n",
+    "\n",
+    "# Mostrar resultado\n",
+    "print(f\"✅ Clube detetado: {pred_class}\")\n",
+    "image.show(title=pred_class)\n"
+   ]
   }
  ],
  "metadata": {
