--- a/notebooks/classification/CNN.ipynb
+++ b/notebooks/classification/CNN.ipynb
@@ -5,7 +5,7 @@
    "id": "641eadff",
    "metadata": {},
    "source": [
-    "# 🧠 APVC – Desafio 2\n",
+    "# 🧠 APVC – Projeto Final \n",
     "## Sistema de Deteção e Classificação de Equipas de Futebol em Imagens de equipamentos\n",
     "\n",
     "### 👥 Grupo G11\n",
