--- a/notebooks/detection/Yolo.ipynb
+++ b/notebooks/detection/Yolo.ipynb
@@ -5,7 +5,7 @@
    "id": "96ed360c",
    "metadata": {},
    "source": [
-    "# 🧠 APVC – Desafio 2\n",
+    "# 🧠 APVC – Projeto Final\n",
     "## Sistema de Deteção e Classificação de Equipas de Futebol em Imagens de equipamentos\n",
     "\n",
     "### 👥 Grupo G11\n",
@@ -19,7 +19,7 @@
     "📅 **Data de entrega:** 15 de Julho  \n",
     "\n",
     "📊 **Objetivo deste script:**\n",
-    "Este notebook tem como finalidade treinar um modelo YOLOv8 para detetar automaticamente emblemas de clubes de futebol em imagens de jogo real extraidas do dataset Logo Classifier do Roboflow. O dataset está anotado (com bounding boxes) continha varias classes diferentes de logos de futebol e foi feito um processo para funcir as classes para representar genericamente a classe “logo”, o script executa o treino completo da rede YOLO, desde o carregamento do dataset até à avaliação do desempenho do modelo.\n",
+    "Este notebook tem como finalidade treinar um modelo YOLOv8 para detetar automaticamente emblemas de clubes de futebol em imagens de jogo real extraidas do dataset Logo Classifier do Roboflow. O dataset está anotado (com bounding boxes) continha varias classes diferentes de logos de futebol e foi feito um processo para fundir as classes para representar genericamente a classe “logo”, o script executa o treino completo da rede YOLO, desde o carregamento do dataset até à avaliação do desempenho do modelo.\n",
     "\n",
     "---\n",
     "\n",
