--- a/notebooks/detection/Yolo_com_CNN.ipynb
+++ b/notebooks/detection/Yolo_com_CNN.ipynb
@@ -5,7 +5,7 @@
    "id": "d003d13c",
    "metadata": {},
    "source": [
-    "# 🧠 APVC – Desafio 2\n",
+    "# 🧠 APVC – Projeto Final\n",
     "## Sistema de Deteção e Classificação de Equipas de Futebol em Imagens de equipamentos\n",
     "\n",
     "### 👥 Grupo G11\n",
@@ -82,41 +82,6 @@
     "cnn.load_state_dict(torch.load(CNN_MODEL_PATH, map_location=DEVICE))\n",
     "cnn = cnn.to(DEVICE)\n",
     "cnn.eval()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cb1011df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cnn_predict_from_yolo(image_path, factor):\n",
-    "    image = Image.open(image_path).convert(\"RGB\")\n",
-    "    image_w, image_h = image.size\n",
-    "\n",
-    "    results = detector(image_path, conf=0.3)\n",
-    "    if not results or not results[0].boxes or len(results[0].boxes.xywh) == 0:\n",
-    "        return None  # nada detetado\n",
-    "\n",
-    "    cx, cy, bw, bh = results[0].boxes.xywh[0]\n",
-    "    bw, bh = bw * factor, bh * factor\n",
-    "\n",
-    "    x1 = int((cx - bw / 2).item())\n",
-    "    y1 = int((cy - bh / 2).item())\n",
-    "    x2 = int((cx + bw / 2).item())\n",
-    "    y2 = int((cx + bw / 2).item())\n",
-    "\n",
-    "    x1, y1 = max(x1, 0), max(y1, 0)\n",
-    "    x2, y2 = min(x2, image_w), min(y2, image_h)\n",
-    "\n",
-    "    cropped = image.crop((x1, y1, x2, y2))\n",
-    "    input_tensor = transform(cropped).unsqueeze(0).to(DEVICE)\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        output = cnn(input_tensor)\n",
-    "        pred_idx = torch.argmax(output, dim=1).item()\n",
-    "        return class_names[pred_idx]\n"
    ]
   },
   {
