--- a/notebooks/detection/Yolo.ipynb
+++ b/notebooks/detection/Yolo.ipynb
@@ -273,7 +273,9 @@
    "id": "2766c5cd",
    "metadata": {},
    "source": [
-    "### Testar fazer shrink e expand aos recortes do Yolo antes de classificar"
+    "### Apenas para teste - shrink e expand aos recortes do Yolo e depois classificar\n",
+    "\n",
+    ">O notebook **yolo_com_cnn.ipynb** vai explorar mais o pipeline este bloco foi só para testar"
    ]
   },
   {
