--- a/notebooks/detection/Yolo.ipynb
+++ b/notebooks/detection/Yolo.ipynb
@@ -29,17 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "275fed12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install ultralytics torch torchvision matplotlib opencv-python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "id": "0907d4d6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +46,9 @@
     "import shutil\n",
     "import random\n",
     "from torchvision import models\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog"
    ]
   },
   {
@@ -219,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "56407a7c",
+   "execution_count": 28,
+   "id": "868a74ff",
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +220,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /Users/pedrofs/Library/CloudStorage/OneDrive-ISCTE-IUL/Mestrado/2ªSem/APVC/Projeto/dataset/yolo-kit-dataset-final/liga-betclic/sporting-cp/sporting-cp.jpg: 640x640 1 logo, 46.8ms\n",
-      "Speed: 1.8ms preprocess, 46.8ms inference, 0.4ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "image 1/1 /Users/pedrofs/Library/CloudStorage/OneDrive-ISCTE-IUL/Mestrado/2ªSem/APVC/Projeto/dataset/yolo-kit-dataset-final/liga-betclic/sporting-cp/sporting-cp.jpg: 640x640 1 logo, 38.3ms\n",
+      "Speed: 1.6ms preprocess, 38.3ms inference, 0.4ms postprocess per image at shape (1, 3, 640, 640)\n",
       "1 emblemas detetados.\n"
      ]
     },
@@ -248,24 +240,38 @@
     "# Carregar o modelo YOLO treinado\n",
     "detector = YOLO(YOLO_MODEL_PATH)\n",
     "\n",
-    "# Caminho para uma imagem de teste (jogo real)\n",
-    "test_image_path = \"/Users/pedrofs/Library/CloudStorage/OneDrive-ISCTE-IUL/Mestrado/2ªSem/APVC/Projeto/dataset/yolo-kit-dataset-final/liga-betclic/sporting-cp/sporting-cp.jpg\"  # substituir nome da imagem\n",
+    "# Abrir janela para escolher imagem\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()  # Esconde a janela principal\n",
     "\n",
-    "# Inferência com YOLO\n",
-    "results = detector(test_image_path, conf=0.3)\n",
+    "# Diretoria inicial\n",
+    "initial_dir = \"/Users/pedrofs/Library/CloudStorage/OneDrive-ISCTE-IUL/Mestrado/2ªSem/APVC/Projeto/dataset/yolo-kit-dataset-final\"\n",
     "\n",
-    "# Verificar se houve alguma deteção\n",
-    "if results[0].boxes is not None and len(results[0].boxes) > 0:\n",
-    "    print(f\"{len(results[0].boxes)} emblemas detetados.\")\n",
-    "    output_image = results[0].plot()\n",
-    "    output_image = cv2.cvtColor(output_image, cv2.COLOR_BGR2RGB)  # corrigir azul\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.imshow(output_image)\n",
-    "    plt.axis('off')\n",
-    "    plt.title(\"Emblemas detetados com YOLOv8\")\n",
-    "    plt.show()\n",
+    "# File chooser\n",
+    "test_image_path = filedialog.askopenfilename(\n",
+    "    initialdir=initial_dir,\n",
+    "    title=\"Escolhe a imagem para testar\",\n",
+    "    filetypes=[(\"Imagens\", \"*.jpg *.jpeg *.png\")]\n",
+    ")\n",
+    "\n",
+    "if not test_image_path:\n",
+    "    print(\"Nenhuma imagem selecionada. A sair...\")\n",
     "else:\n",
-    "    print(\"Nenhuma deteção encontrada — verificar confiança, qualidade ou treino.\")\n"
+    "    # Inferência com YOLO\n",
+    "    results = detector(test_image_path, conf=0.3)\n",
+    "\n",
+    "    # Verificar se houve alguma deteção\n",
+    "    if results[0].boxes is not None and len(results[0].boxes) > 0:\n",
+    "        print(f\"{len(results[0].boxes)} emblemas detetados.\")\n",
+    "        output_image = results[0].plot()\n",
+    "        output_image = cv2.cvtColor(output_image, cv2.COLOR_BGR2RGB)\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.imshow(output_image)\n",
+    "        plt.axis('off')\n",
+    "        plt.title(\"Emblemas detetados com YOLOv8\")\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        print(\"Nenhuma deteção encontrada — verificar confiança, qualidade ou treino.\")\n"
    ]
   },
   {
